syntax = "proto3";
package m2g.pb;

message ServerCommand {}

message ClientCommand {}
